# clipsearch_backend

./: .gitignore  README.md  config.json  go.mod  main.go  meson.build
.github/workflows/: golangci-lint.yml  lint-and-test.yml
binding/: binding.go  binding_test.go
clip_daemons/: feature_extraction_daemon.py  image_embedding_daemon.py  jsend.py  search_daemon.py  text_embedding_daemon.py
config/: config.go
controllers/: image_controller.go  image_controller_test.go
db/migrations/: 000001_create_images_table.up.sql  000002_add_embedding_column.down.sql  000002_add_embedding_column.up.sql
docs/: swagger.json  swagger.yaml
dtos/: image.go  jsend_generic.go
models/: image.go
repositories/: image_repository.go  mock_image_repository.go  pg_image_repository.go
services/: clip_service.go  image_feature_daemon_connection.go  image_search_daemon_connection.go  image_service.go  image_service_test.go  mock_clip_service.go  zmq_clip_service.go  zmq_image_embedding_daemon_connection.go  zmq_text_embedding_daemon_connection.go
src/: clipsearch_api.cpp  clipsearch_api.hpp  config.cpp  config.hpp  main.cpp
utils/: download_file.go  download_file_test.go  download_file_to_temp.go
